# hobbies

./: .gitignore  .gitmodules  audio.py  find_avx.py  libcurl_test.c  mat_a.txt  mat_b.txt  matrix_mul.c  nine_queens.py  pressition.py  rombo.py  test.c  what_provides_steroids.py
amx_build/: Dockerfile  build-binutils.sh  build-gcc.sh
apache_build/: build.sh
arduino-robot/: bt.c
benchdnn/: Dockerfile  README.md
bfloat16_tests/: Dockerfile  cast.py
bigdl_scripts/: perf_automation.sh  train-inceptionv1-single-node-prebuild.sh  train-inceptionv1-single-node.sh
branch_predictor_stress/: Makefile  README.md  branch_predictor_stress.c
c_programing_exercises/: README.md  basic.c  buffer_overflow.c  check_time.c  date  function.c  getcpu.c  inline.c  loop_interchange.c  loop_interchange_bad_perf.c  redundancy.c  sincosf.c  switch.c
chatbot_db/: README.md
clr-scripts/: Dockerfile  README.md  buildnew_gcc.sh  do_openstack_pkg.py
clustering_text/: cluster_wiki.py
combination_map/: combination.py  cpu.txt  main.py  os.txt  ram.txt
cpu_monitor/: Makefile  cpu_utilization.c  cpu_utilization.sh  main.c
cves_handling_tool/: .gitignore  README.md  cve_policy_filter.py  data.csv  filter.py  get_new.py  lp.py  main.py  new.csv  old.csv  template.txt  wiki_info.md
cyclictest/: mklatencyplot.bash  plotcmd
dev_ops/: kill_vm_timer.c  print_html_report.py  qcow2vdi.sh  test_master.sh  test_template.html
dlrs_experiments/: Dockerfile  Dockerfile_pytorch  Makefile
golang/: if.go  (+15 more)
rust/machine_learning_linfa/: Cargo.toml
rust/machine_learning_linfa/src/: main.rs
(+520 files in other folders)
