[package]
name = "machin_learning_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-nn = "0.7.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.5"
polars = { version = "0.35.4", features = ["ndarray"]}
rand_xoshiro = "0.6.0"
